# Local-Spark-Agent

./: .replit  ADVANCED_AGENT_FRAMEWORKS.md  AI_SDK_EVALUATION.md  CODING_AGENT_ANALYSIS.md  CODING_TOOLS_COMPETITIVE_ANALYSIS.md  ENHANCEMENT_MAPPING_ANALYSIS.md  INSTALL.md  LAYOUT_INTEGRATION_DIAGRAM.md  PHASE_1_IMPLEMENTATION_SUMMARY.md  SPARKPLUG_ADVANCED_AGENT_INTEGRATION.md  SparkPlug.code-workspace  TUI_REVIEW_AND_RECOMMENDATIONS.md  fix_home_tsx.py  package-lock.json  package.json  pyproject.toml  pyrightconfig.json
.cursor/: mcp.json
.factory/: mcp-config.json
.factory/droids/: terminal-ui-craftsman.md
.factory/slash-commands/: create-project.md  monitor.md  setup.md  status.md  verify.md
attached_assets/: Pasted-Clicking-ADD-Custom-Tool-API-should-open-a-modal-drawer_1767204400978.txt
client/: index.html
client/src/: index.css
script/phase1_data_strategy/: data_sourcing.py
script/phase2_conception_design/: requirement_analysis.py
script/phase3_development_training/: training_pipeline.py
script/phase4_validation_testing/: comprehensive_evaluation.py
script/phase5_deployment_operations/: deployment_pipeline.py  incident_management.py  intelligent_monitoring.py  monitoring_system.py
server/: index.ts  routes.ts  storage.ts  websocket.ts
shared/: schema.ts
sparkplug-ml/: pyproject.toml
sparkplug-ml/configs/: default.yaml
sparkplug-ml/src/: __init__.py  api.py
sparkplug-ml/src/utilities/: configuration_manager.py  version_control.py
tui/: README.md  __init__.py  api_client.py  requirements.txt  sparkplug_tui.py  styles.tcss
(+48 files in other folders)
