[project]
name = "sparkplug-ml"
version = "0.1.0"
description = "Machine Learning Pipeline for SparkPlug"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "datasets>=2.14.0",
    "evaluate>=0.4.0",
    "kubernetes>=28.0.0",
    "docker>=6.1.0",
    "mlflow>=2.9.0",
    "wandb>=0.16.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pyyaml>=6.0",
    "cryptography>=41.0.0",
    "psutil>=5.9.0",
    "tqdm>=4.65.0",
    "requests>=2.31.0",
    "aiohttp>=3.8.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
sparkplug-ml = "sparkplug_ml.cli:main"
